; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_unpack.c_unpack.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_unpack.c_unpack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"dup\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i64, i32*)* @unpack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unpack(i32 %0, i32 %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_5__, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @dup(i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, -1
  br i1 %15, label %16, label %18

16:                                               ; preds = %5
  %17 = call i32 @maybe_err(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %5
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @dup(i32 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = call i32 @maybe_err(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  br label %25

25:                                               ; preds = %23, %18
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i8*, i8** %8, align 8
  %29 = load i64, i64* %9, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @unpack_parse_header(i32 %26, i32 %27, i8* %28, i64 %29, i32* %30, %struct.TYPE_5__* %11)
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 @unpack_decode(%struct.TYPE_5__* %11, i32* %32)
  %34 = call i32 @unpack_descriptor_fini(%struct.TYPE_5__* %11)
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  ret i32 %36
}

declare dso_local i32 @dup(i32) #1

declare dso_local i32 @maybe_err(i8*) #1

declare dso_local i32 @unpack_parse_header(i32, i32, i8*, i64, i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @unpack_decode(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @unpack_descriptor_fini(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
